[package]
name = "pi_vm"
version = "0.1.0"
authors = ["zuon <dev@dev.com>"]

[dependencies]
libc = "0.2"
rand = "0.6"
crossbeam-queue = "0.1"
lazy_static = "1.3"
kernel32-sys = "0.2"
flame = "0.2"
flamer = "0.3"

atom = { path = "../pi_lib/atom" }
worker = { path = "../pi_lib/worker" }
handler = { path = "../pi_lib/handler" }
timer = { path = "../pi_lib/timer" }
gray = { path = "../pi_lib/gray" }
util = { path = "../pi_lib/util" }
task_pool = { path = "../pi_lib/task_pool" }
apm = { path = "../pi_lib/apm" }
lfstack = { path = "../pi_lib/lfstack" }